examples/gateway-google.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: inference-gateway
  labels:
    inference-gateway.com/managed: "true"
---
apiVersion: core.inference-gateway.com/v1alpha1
kind: Gateway
metadata:
  name: google-gateway
  namespace: inference-gateway
spec:
  replicas: 1
  image: "ghcr.io/inference-gateway/inference-gateway:latest"
  environment: development
  telemetry:
    enabled: true
    metrics:
      enabled: true
      port: 9464
  server:
    host: "0.0.0.0"
    port: 8080
  providers:
    - name: Google
      env:
        - name: GOOGLE_API_URL
          valueFrom:
            configMapKeyRef:
              name: inference-gateway-config
              key: api_url
        - name: GOOGLE_API_KEY
          valueFrom:
            secretKeyRef:
              name: google-secret
              key: api_key
